src/tests/ci/assignment_5_functions/invalid_semantic/32_function_redefinition.c
int foo() {
    return 1;
}

int foo() {
    return 2;
}

int main() {
    return foo();
}